--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -8,7 +8,7 @@
     font-size: 4rem;
 }
 .content{
-    height: 90dvh;
+    height: 85dvh;
     background-color: #FDF6E6;
     display: flex;
     flex-direction: row;
